--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -2,6 +2,7 @@
     "name": "@moten/server",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js"
