--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.19.2",
+        "joi": "^17.13.1",
         "mysql2": "^3.9.7",
         "nodemon": "^3.1.0"
     }
