--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dayjs": "^1.11.10",
         "express": "^4.19.2",
         "joi": "^17.13.1",
+        "lodash-es": "^4.17.21",
         "mysql2": "^3.9.7",
         "nodemon": "^3.1.0"
     }
