--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "dayjs": "^1.11.10",
         "express": "^4.19.2",
         "joi": "^17.13.1",
