--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "admin:build": "pnpm -F @moten/admin build",
         "play:vue2": "node --loader ts-node/esm ./scripts/play.ts -- vue2",
         "play:vue3": "node --loader ts-node/esm ./scripts/play.ts -- vue3",
-        "server": "pnpm -F @moten/server dev"
+        "sv": "pnpm --filter @moten/server run dev"
     },
     "license": "ISC",
     "devDependencies": {
