chore(admin): replace local image to svg icon lib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
   "cSpell.words": [
     "demi",
-    "moten",
+    "iconify",
     "imengyu",
+    "moten",
     "nuxt",
     "pinia",
     "popconfirm",
