--- a/packages/moten-admin/package.json
+++ b/packages/moten-admin/package.json
@@ -8,13 +8,15 @@
         "build": "vue-tsc && vite build"
     },
     "dependencies": {
-        "@moten/ui": "workspace: *",
         "@element-plus/directives": "^0.0.5",
         "@element-plus/icons-vue": "^2.3.1",
+        "@iconify/vue": "^4.1.2",
         "@imengyu/vue3-context-menu": "^1.3.8",
+        "@moten/ui": "workspace: *",
         "@sinclair/typebox": "^0.32.15",
         "@vueup/vue-quill": "^1.2.0",
         "@vueuse/core": "^10.9.0",
+        "autoprefixer": "^10.4.18",
         "axios": "^1.6.7",
         "dayjs": "^1.11.10",
         "element-plus": "^2.6.1",
@@ -22,13 +24,12 @@
         "lodash": "^4.17.21",
         "nanoid": "^5.0.6",
         "pinia": "^2.1.7",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
         "tiny-async-pool": "^2.1.0",
         "vue": "^3.4.19",
         "vue-router": "^4.3.0",
-        "vuedraggable": "^4.1.0",
-        "autoprefixer": "^10.4.18",
-        "postcss": "^8.4.35",
-        "tailwindcss": "^3.4.1"
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@types/js-cookie": "^3.0.6",
