--- a/packages/moten-admin/package.json
+++ b/packages/moten-admin/package.json
@@ -19,6 +19,7 @@
         "autoprefixer": "^10.4.18",
         "axios": "^1.6.7",
         "dayjs": "^1.11.10",
+        "deepmerge": "^4.3.1",
         "element-plus": "^2.6.1",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
