--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -49,6 +49,7 @@
     },
     "dependencies": {
         "vue-demi": "^0.14.7",
+        "vue-router": "^3.6.5",
         "vue2": "npm:vue@~2.6.14",
         "vue2.7": "npm:vue@~2.7.16",
         "vue3": "npm:vue@3"
@@ -56,8 +57,8 @@
     "devDependencies": {
         "@sinclair/typebox": "^0.32.15",
         "@vitejs/plugin-vue": "^5.0.4",
-        "@vue/composition-api": "^1.7.2",
         "@vue/compiler-sfc": "^3.4.21",
+        "@vue/composition-api": "^1.7.2",
         "@vue/test-utils": "^2.3.2",
         "autoprefixer": "^10.4.18",
         "jsdom": "^24.0.0",
