--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -39,7 +39,7 @@
         "dev:vue3": "pnpm switch:vue3 && vue-tsc && vite build --watch",
         "build": "pnpm clear:dist && pnpm build:vue2 && pnpm build:vue3",
         "build:vue3": "pnpm switch:vue3 && vue-tsc && vite build",
-        "build:vue2": "pnpm switch:vue2 && vue-tsc && vite build --config vite.config.vue2.ts",
+        "build:vue2": "pnpm switch:vue2 && vue-tsc && vite build --config vite.config.vue2.js",
         "clear": "rimraf dist ./node_modules",
         "clear:dist": "rimraf dist",
         "test": "pnpm switch:vue3 && vitest",
@@ -49,7 +49,6 @@
     },
     "dependencies": {
         "vue-demi": "^0.14.7",
-        "vue-router": "^3.6.5",
         "vue2": "npm:vue@~2.6.14",
         "vue2.7": "npm:vue@~2.7.16",
         "vue3": "npm:vue@3"
