--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -39,7 +39,7 @@
         "dev:vue3": "pnpm switch:vue3 && vue-tsc && vite build --watch",
         "build": "pnpm clear:dist && pnpm build:vue2 && pnpm build:vue3",
         "build:vue3": "pnpm switch:vue3 && vue-tsc && vite build",
-        "build:vue2": "pnpm switch:vue2 && vue-tsc && vite build --config vite.config.vue2.js",
+        "build:vue2": "pnpm switch:vue2 && vue-tsc && vite build --config vite.config.vue2.ts",
         "clear": "rimraf dist ./node_modules",
         "clear:dist": "rimraf dist",
         "test": "pnpm switch:vue3 && vitest",
