--- a/packages/moten-admin/package.json
+++ b/packages/moten-admin/package.json
@@ -17,6 +17,7 @@
         "@vueup/vue-quill": "^1.2.0",
         "@vueuse/core": "^10.9.0",
         "ajv": "^8.13.0",
+        "ajv-errors": "^3.0.0",
         "autoprefixer": "^10.4.18",
         "axios": "^1.6.7",
         "dayjs": "^1.11.10",
