--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -38,15 +38,13 @@
     },
     "dependencies": {
         "@vue/composition-api": "^1.7.2",
-        "vue": "^3.4.21",
         "vue-demi": "^0.14.7",
         "vue2": "npm:vue@~2.6.14",
         "vue2.7": "npm:vue@~2.7.16",
         "vue3": "npm:vue@~3"
     },
     "peerDependencies": {
-        "@vue/composition-api": "^1.7.2",
-        "vue": "^2.0.0 || >=3.0.0"
+        "@vue/composition-api": "^1.7.2"
     },
     "peerDependenciesMeta": {
         "@vue/composition-api": {
