feat: 开发拖拽 物料区 组件列表渲染

--- a/packages/moten-playground/vue3/package.json
+++ b/packages/moten-playground/vue3/package.json
@@ -12,7 +12,7 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
     },
     "dependencies": {
-        "@moten/ui": "workspace:^0.0.0",
+        "@moten/ui": "workspace:~",
         "pinia": "^2.1.7",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
