--- a/packages/moten-editor/package.json
+++ b/packages/moten-editor/package.json
@@ -13,10 +13,15 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@moten/ui": "workspace:~",
+        "@sinclair/typebox": "^0.32.31",
         "element-plus": "^2.7.3",
+        "lodash": "^4.17.21",
+        "nanoid": "^5.0.7",
         "pinia": "^2.1.7",
         "vue": "^3.4.21",
-        "vue-router": "^4.3.0"
+        "vue-router": "^4.3.0",
+        "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
         "@iconify/vue": "^4.1.2",
