--- a/packages/moten-playground/vue2/package.json
+++ b/packages/moten-playground/vue2/package.json
@@ -8,7 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@moten/ui": "workspace:^0.0.0",
+        "@moten/ui": "workspace:~",
         "core-js": "^3.8.3",
         "vue": "^2.6.14"
     },
