--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -1,14 +1,16 @@
 {
     "name": "@moten/ui",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "main": "./dist/vue3/moten.umd.cjs",
     "module": "./dist/vue3/moten.js",
+    "types": "./dist/vue3/main.d.ts",
     "exports": {
         ".": {
             "import": "./dist/vue3/moten.js",
-            "require": "./dist/vue3/moten.umd.cjs"
+            "require": "./dist/vue3/moten.umd.cjs",
+            "types": "./dist/vue3/main.d.ts"
         },
         "./style": {
             "import": "./dist/vue3/style.css",
@@ -16,7 +18,8 @@
         },
         "./vue2": {
             "import": "./dist/vue2/moten.js",
-            "require": "./dist/vue2/moten.umd.cjs"
+            "require": "./dist/vue2/moten.umd.cjs",
+            "types": "./dist/vue2/main.d.ts"
         },
         "./vue2/style": {
             "import": "./dist/vue2/style.css",
@@ -37,21 +40,14 @@
         "coverage": "pnpm switch:vue3 && vitest run --coverage"
     },
     "dependencies": {
-        "@vue/composition-api": "^1.7.2",
         "vue-demi": "^0.14.7",
         "vue2": "npm:vue@~2.6.14",
         "vue2.7": "npm:vue@~2.7.16",
         "vue3": "npm:vue@~3"
     },
-    "peerDependencies": {
-        "@vue/composition-api": "^1.7.2"
-    },
-    "peerDependenciesMeta": {
-        "@vue/composition-api": {
-            "optional": true
-        }
-    },
     "devDependencies": {
+        "@sinclair/typebox": "^0.32.31",
+        "@vue/composition-api": "^1.7.2",
         "@types/node": "^20.12.12",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vue/compiler-sfc": "^3.4.27",
@@ -62,6 +58,7 @@
         "tailwindcss": "^3.4.3",
         "typescript": "^5.2.2",
         "vite": "^5.2.0",
+        "vite-plugin-dts": "^3.9.1",
         "vite-plugin-vue2": "^2.0.3",
         "vitest": "^1.6.0",
         "vue-tsc": "^2.0.6"
