--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "scripts": {
         "preinstall": "npx only-allow pnpm",
         "in": "pnpm i -r",
-        "dev": "pnpm -F @moten/editor dev",
+        "dev": "node ./scripts/dev.js",
+        "editor": "pnpm -F @moten/editor dev",
         "build": "pnpm ui:build && pnpm -F @moten/editor build-only",
         "clear": "rimraf --glob ./node_modules ./packages/**/node_modules ./packages/**/dist",
         "ui": "pnpm -F @moten/ui dev",
