--- a/packages/moten-ui/package.json
+++ b/packages/moten-ui/package.json
@@ -48,10 +48,12 @@
         "@sinclair/typebox": "^0.32.31",
         "@types/node": "^20.12.12",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vitest/coverage-v8": "^1.6.0",
         "@vue/compiler-sfc": "^3.4.27",
         "@vue/composition-api": "^1.7.2",
         "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.19",
+        "jsdom": "^24.1.0",
         "postcss": "^8.4.38",
         "rimraf": "^5.0.7",
         "sass": "^1.77.2",
