feat: 开发拖拽 配置区 组件 配置解析

--- a/packages/moten-editor/package.json
+++ b/packages/moten-editor/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@moten/ui": "workspace:~",
         "@sinclair/typebox": "^0.32.31",
+        "deepmerge": "^4.3.1",
         "element-plus": "^2.7.3",
         "lodash": "^4.17.21",
         "nanoid": "^5.0.7",
