--- a/packages/moten-editor/package.json
+++ b/packages/moten-editor/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@moten/ui": "workspace:~",
         "@sinclair/typebox": "^0.32.31",
+        "ajv": "^8.16.0",
+        "ajv-errors": "^3.0.0",
         "deepmerge": "^4.3.1",
         "element-plus": "^2.7.3",
         "lodash": "^4.17.21",
