--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -5,11 +5,13 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2"
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "nodemon": "^3.1.3"
     }
 }
