--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.19.2",
+        "express-async-errors": "^3.1.1",
         "mysql2": "^3.10.2",
         "nodemon": "^3.1.3"
     }
