--- a/packages/moten-server/package.json
+++ b/packages/moten-server/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "express-async-errors": "^3.1.1",
+        "joi": "^17.13.3",
         "mysql2": "^3.10.2",
         "nodemon": "^3.1.3"
     }
